# yew-parcel-template

./: .gitignore  README.md  index.html  package-lock.json  package.json  wasm-builder.js  wasm_pack_cmd  wasm_pack_cmd.bat  wasm_pack_cmd.v
.bin/: create-yew-parcel.js
.github/: FUNDING.yml
app/: index.ts  main.sass
crate/: Cargo.toml
crate/src/: app.rs  lib.rs
crate/src/pages/: about.rs  home.rs  mod.rs  view_state.rs
