[package]
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm"]
description = "My awesome Yew with Yew-Router and Parcel application!"
license = "MIT"
name = "yew-parcel"
readme = "./README.md"
repository = "https://github.com/spielrs/yew-parcel-template.git"
version = "0.17.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.17", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.14", features = ["web_sys"]}
web-sys = "0.3"
yew_styles = { version="0.9", features = ["navbar"]}